--- a/ferias.html
+++ b/ferias.html
@@ -1,129 +1,104 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lançar Férias</title>
   <style>
-    * {
+    body {
+      background-color: #ffe6f0;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9d5ec;
-      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
 
     header {
+      background-color: #ff66a3;
       width: 100%;
-      background-color: #f06292;
-      padding: 10px 0;
+      padding: 15px 0;
+      text-align: center;
+      font-weight: bold;
+      color: white;
+      font-size: 24px;
+    }
+
+    nav {
+      background-color: #ff99c2;
+      width: 100%;
       display: flex;
       justify-content: center;
-      gap: 10px;
       flex-wrap: wrap;
+      gap: 10px;
+      padding: 10px 0;
     }
 
-    header a {
-      text-decoration: none;
-      background-color: #fff;
-      color: #f06292;
-      font-weight: bold;
+    nav a {
+      background-color: white;
+      color: #ff3399;
       padding: 10px 15px;
       border-radius: 8px;
-      transition: 0.3s;
+      text-decoration: none;
+      font-weight: bold;
     }
 
-    header a:hover {
-      background-color: #f8bbd0;
-    }
-
-    main {
-      background-color: white;
-      margin-top: 40px;
-      padding: 30px;
+    .container {
+      background: white;
+      margin-top: 20px;
+      padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
       width: 90%;
-      max-width: 700px;
+      max-width: 800px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
     }
 
-    h1 {
-      color: #f06292;
-      margin-bottom: 20px;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-
-    input, select, button {
-      padding: 10px;
+    input, select {
+      padding: 8px;
+      margin: 5px;
       border-radius: 8px;
       border: 1px solid #ccc;
-      width: 100%;
+      width: 90%;
+      max-width: 300px;
     }
 
     button {
-      background-color: #f06292;
+      padding: 10px 20px;
+      background-color: #ff66a3;
       color: white;
       border: none;
+      border-radius: 8px;
       font-weight: bold;
       cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #ec407a;
+      margin-top: 10px;
     }
 
     table {
       width: 100%;
-      border-collapse: collapse;
       margin-top: 20px;
+      border-collapse: collapse;
     }
 
     th, td {
+      border: 1px solid #ffb3d9;
       padding: 10px;
-      border-bottom: 1px solid #ccc;
       text-align: center;
     }
 
-    .actions button {
-      margin: 0 5px;
-      background-color: #f06292;
-      color: white;
-      border: none;
-      padding: 5px 10px;
-      border-radius: 5px;
-      cursor: pointer;
+    th {
+      background-color: #ffe6f0;
     }
 
-    .actions button:hover {
-      background-color: #e91e63;
-    }
-
-    .sort-container {
-      margin-top: 10px;
-      display: flex;
-      justify-content: flex-end;
-    }
-
-    .sort-container select {
-      max-width: 200px;
+    .acoes button {
+      margin: 2px;
     }
   </style>
 </head>
 <body>
-  <header>
+  <header>Lançar Férias</header>
+  <nav>
     <a href="index.html">Início</a>
     <a href="cadastro.html">Cadastrar Funcionário</a>
     <a href="ativos.html">Funcionários Ativos</a>
@@ -132,115 +107,128 @@
     <a href="demissao.html">Registrar Demissão</a>
     <a href="aviso.html">Aviso Prévio</a>
     <a href="relatorio.html">Gerar Relatório</a>
-  </header>
+  </nav>
+  <div class="container">
+    <h2>Registrar Férias</h2>
+    <input type="text" id="nome" placeholder="Nome">
+    <input type="text" id="cpf" placeholder="CPF">
+    <input type="date" id="inicio">
+    <input type="date" id="fim">
+    <input type="text" id="local" placeholder="Local">
+    <button onclick="registrarFerias()">Registrar</button>
 
-  <main>
-    <h1>Lançar Férias</h1>
-    <form id="feriasForm">
-      <input type="text" id="nome" placeholder="Nome do Funcionário" required>
-      <input type="date" id="dataInicio" required>
-      <input type="date" id="dataFim" required>
-      <select id="tipo">
-        <option value="normal">Férias Normais</option>
-        <option value="vencidas">Férias Vencidas</option>
-      </select>
-      <button type="submit">Salvar Férias</button>
-    </form>
-
-    <div class="sort-container">
-      <select id="ordenar">
-        <option value="nome">Ordenar por Nome (A-Z)</option>
-        <option value="data">Ordenar por Data (Mais recente)</option>
+    <div style="margin-top:20px;">
+      <label>Ordenar por:</label>
+      <select id="ordenar" onchange="exibirFerias()">
+        <option value="nome">Nome (A-Z)</option>
+        <option value="data">Data Mais Recente</option>
       </select>
     </div>
 
-    <table id="tabelaFerias">
+    <table>
       <thead>
         <tr>
           <th>Nome</th>
+          <th>CPF</th>
           <th>Início</th>
           <th>Fim</th>
-          <th>Tipo</th>
+          <th>Local</th>
           <th>Ações</th>
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody id="tabelaFerias"></tbody>
     </table>
-  </main>
+  </div>
 
   <script>
-    const form = document.getElementById('feriasForm');
-    const tabela = document.querySelector('#tabelaFerias tbody');
-    const ordenar = document.getElementById('ordenar');
-    let listaFerias = JSON.parse(localStorage.getItem('ferias')) || [];
-    let editandoIndex = -1;
+    let indexEdicao = null;
 
-    function salvarDados() {
-      localStorage.setItem('ferias', JSON.stringify(listaFerias));
-      mostrarTabela();
+    function getFerias() {
+      return JSON.parse(localStorage.getItem('ferias')) || [];
     }
 
-    function mostrarTabela() {
-      tabela.innerHTML = '';
-      let lista = [...listaFerias];
+    function salvarFerias(lista) {
+      localStorage.setItem('ferias', JSON.stringify(lista));
+    }
 
-      if (ordenar.value === 'nome') {
-        lista.sort((a, b) => a.nome.localeCompare(b.nome));
+    function registrarFerias() {
+      const nome = document.getElementById('nome').value;
+      const cpf = document.getElementById('cpf').value;
+      const inicio = document.getElementById('inicio').value;
+      const fim = document.getElementById('fim').value;
+      const local = document.getElementById('local').value;
+
+      if (!nome || !cpf || !inicio || !fim || !local) return;
+
+      const lista = getFerias();
+
+      if (indexEdicao !== null) {
+        lista[indexEdicao] = { nome, cpf, inicio, fim, local };
+        indexEdicao = null;
       } else {
-        lista.sort((a, b) => new Date(b.dataInicio) - new Date(a.dataInicio));
+        lista.push({ nome, cpf, inicio, fim, local });
       }
 
-      lista.forEach((f, i) => {
-        const tr = document.createElement('tr');
-        tr.innerHTML = `
+      salvarFerias(lista);
+      limparCampos();
+      exibirFerias();
+    }
+
+    function exibirFerias() {
+      const lista = getFerias();
+      const ordenarPor = document.getElementById('ordenar').value;
+
+      if (ordenarPor === 'nome') {
+        lista.sort((a, b) => a.nome.localeCompare(b.nome));
+      } else {
+        lista.sort((a, b) => new Date(b.inicio) - new Date(a.inicio));
+      }
+
+      const tabela = document.getElementById('tabelaFerias');
+      tabela.innerHTML = '';
+
+      lista.forEach((f, index) => {
+        const linha = `<tr>
           <td>${f.nome}</td>
-          <td>${f.dataInicio}</td>
-          <td>${f.dataFim}</td>
-          <td>${f.tipo}</td>
-          <td class="actions">
-            <button onclick="editar(${i})">Editar</button>
-            <button onclick="excluir(${i})">Excluir</button>
+          <td>${f.cpf}</td>
+          <td>${f.inicio}</td>
+          <td>${f.fim}</td>
+          <td>${f.local}</td>
+          <td class="acoes">
+            <button onclick="editarFerias(${index})">Editar</button>
+            <button onclick="excluirFerias(${index})">Excluir</button>
           </td>
-        `;
-        tabela.appendChild(tr);
+        </tr>`;
+        tabela.innerHTML += linha;
       });
     }
 
-    function editar(index) {
-      const ferias = listaFerias[index];
-      document.getElementById('nome').value = ferias.nome;
-      document.getElementById('dataInicio').value = ferias.dataInicio;
-      document.getElementById('dataFim').value = ferias.dataFim;
-      document.getElementById('tipo').value = ferias.tipo;
-      editandoIndex = index;
+    function editarFerias(index) {
+      const f = getFerias()[index];
+      document.getElementById('nome').value = f.nome;
+      document.getElementById('cpf').value = f.cpf;
+      document.getElementById('inicio').value = f.inicio;
+      document.getElementById('fim').value = f.fim;
+      document.getElementById('local').value = f.local;
+      indexEdicao = index;
     }
 
-    function excluir(index) {
-      listaFerias.splice(index, 1);
-      salvarDados();
+    function excluirFerias(index) {
+      const lista = getFerias();
+      lista.splice(index, 1);
+      salvarFerias(lista);
+      exibirFerias();
     }
 
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
-      const nome = document.getElementById('nome').value;
-      const dataInicio = document.getElementById('dataInicio').value;
-      const dataFim = document.getElementById('dataFim').value;
-      const tipo = document.getElementById('tipo').value;
+    function limparCampos() {
+      document.getElementById('nome').value = '';
+      document.getElementById('cpf').value = '';
+      document.getElementById('inicio').value = '';
+      document.getElementById('fim').value = '';
+      document.getElementById('local').value = '';
+    }
 
-      if (editandoIndex > -1) {
-        listaFerias[editandoIndex] = { nome, dataInicio, dataFim, tipo };
-        editandoIndex = -1;
-      } else {
-        listaFerias.push({ nome, dataInicio, dataFim, tipo });
-      }
-
-      form.reset();
-      salvarDados();
-    });
-
-    ordenar.addEventListener('change', mostrarTabela);
-
-    mostrarTabela();
+    exibirFerias();
   </script>
 </body>
 </html>
