--- a/aviso.html
+++ b/aviso.html
@@ -1,140 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aviso Prévio</title>
   <style>
-    * {
+    body {
+      background-color: #ffe6f0;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9d5ec;
-      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
-
-    header {
-      width: 100%;
-      background-color: #f06292;
-      padding: 10px 0;
+    .nav {
       display: flex;
       justify-content: center;
       gap: 10px;
-      flex-wrap: wrap;
+      background-color: #ff99cc;
+      padding: 10px;
+      width: 100%;
     }
-
-    header a {
+    .nav a {
       text-decoration: none;
-      background-color: #fff;
-      color: #f06292;
-      font-weight: bold;
+      background-color: white;
+      color: #ff3399;
       padding: 10px 15px;
       border-radius: 8px;
-      transition: 0.3s;
-    }
-
-    header a:hover {
-      background-color: #f8bbd0;
-    }
-
-    main {
-      background-color: white;
-      margin-top: 40px;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      width: 90%;
-      max-width: 700px;
-      text-align: center;
-    }
-
-    h1 {
-      color: #f06292;
-      margin-bottom: 20px;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-
-    input, button, label {
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      width: 100%;
-    }
-
-    button {
-      background-color: #f06292;
-      color: white;
-      border: none;
       font-weight: bold;
-      cursor: pointer;
     }
-
-    button:hover {
-      background-color: #ec407a;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
+    h1 {
+      color: #cc0066;
       margin-top: 20px;
     }
-
-    th, td {
-      padding: 10px;
-      border-bottom: 1px solid #ccc;
-      text-align: center;
+    .container {
+      background: white;
+      padding: 20px;
+      border-radius: 16px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      margin-top: 20px;
+      width: 90%;
+      max-width: 800px;
     }
-
-    .actions button {
-      margin: 0 5px;
-      background-color: #f06292;
+    input, select, button {
+      padding: 10px;
+      margin: 5px 0;
+      width: 100%;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+    table {
+      width: 100%;
+      margin-top: 20px;
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      text-align: left;
+    }
+    button {
+      background-color: #ff66b2;
       color: white;
       border: none;
-      padding: 5px 10px;
-      border-radius: 5px;
       cursor: pointer;
     }
-
-    .actions button:hover {
-      background-color: #e91e63;
-    }
-
-    .sort-container {
-      margin-top: 10px;
-      display: flex;
-      justify-content: flex-end;
-    }
-
-    .sort-container select {
-      max-width: 200px;
-    }
-
-    .checkbox-container {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      justify-content: start;
-    }
-
-    .checkbox-container input[type="checkbox"] {
+    .actions button {
       width: auto;
+      margin-right: 5px;
+    }
+    .sort {
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <header>
+  <div class="nav">
     <a href="index.html">Início</a>
     <a href="cadastro.html">Cadastrar Funcionário</a>
     <a href="ativos.html">Funcionários Ativos</a>
@@ -143,126 +85,129 @@
     <a href="demissao.html">Registrar Demissão</a>
     <a href="aviso.html">Aviso Prévio</a>
     <a href="relatorio.html">Gerar Relatório</a>
-  </header>
-
-  <main>
-    <h1>Aviso Prévio</h1>
-    <form id="avisoForm">
-      <input type="text" id="nome" placeholder="Nome do Funcionário" required>
-      <input type="text" id="cpf" placeholder="CPF" required>
-      <input type="date" id="dataInicio" required>
-      <input type="date" id="dataFim" required>
-      <div class="checkbox-container">
-        <input type="checkbox" id="reduzirSeteDias">
-        <label for="reduzirSeteDias">Reduzir 7 dias do aviso prévio</label>
-      </div>
-      <button type="submit">Salvar Aviso</button>
-    </form>
-
-    <div class="sort-container">
-      <select id="ordenar">
+  </div>
+  <h1>Aviso Prévio</h1>
+  <div class="container">
+    <input type="text" id="nome" placeholder="Nome do Funcionário">
+    <input type="text" id="cpf" placeholder="CPF">
+    <input type="date" id="inicio">
+    <input type="date" id="fim">
+    <input type="text" id="motivo" placeholder="Motivo do Aviso">
+    <input type="text" id="local" placeholder="Local">
+    <button onclick="registrarAviso()">Registrar Aviso</button>
+    <div class="sort">
+      <select id="ordenar" onchange="listarAvisos()">
         <option value="nome">Ordenar por Nome (A-Z)</option>
-        <option value="data">Ordenar por Início (Mais recente)</option>
+        <option value="data">Ordenar por Data Mais Recente</option>
       </select>
     </div>
-
-    <table id="tabelaAvisos">
+    <table>
       <thead>
         <tr>
           <th>Nome</th>
           <th>CPF</th>
           <th>Início</th>
-          <th>Término</th>
+          <th>Fim</th>
+          <th>Motivo</th>
+          <th>Local</th>
           <th>Ações</th>
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody id="tabela"></tbody>
     </table>
-  </main>
+  </div>
 
   <script>
-    const form = document.getElementById('avisoForm');
-    const tabela = document.querySelector('#tabelaAvisos tbody');
-    const ordenar = document.getElementById('ordenar');
-    let listaAvisos = JSON.parse(localStorage.getItem('avisos')) || [];
-    let editandoIndex = -1;
+    let avisoEdicao = -1;
 
-    function salvarDados() {
-      localStorage.setItem('avisos', JSON.stringify(listaAvisos));
-      mostrarTabela();
-    }
+    function registrarAviso() {
+      const nome = document.getElementById('nome').value;
+      const cpf = document.getElementById('cpf').value;
+      const inicio = document.getElementById('inicio').value;
+      let fim = document.getElementById('fim').value;
+      const motivo = document.getElementById('motivo').value;
+      const local = document.getElementById('local').value;
 
-    function mostrarTabela() {
-      tabela.innerHTML = '';
-      let lista = [...listaAvisos];
+      if (!nome || !cpf || !inicio || !fim || !motivo || !local) return alert('Preencha todos os campos');
 
-      if (ordenar.value === 'nome') {
-        lista.sort((a, b) => a.nome.localeCompare(b.nome));
+      const fimDate = new Date(fim);
+      fimDate.setDate(fimDate.getDate() - 7);
+      fim = fimDate.toISOString().split('T')[0];
+
+      const novoAviso = { nome, cpf, inicio, fim, motivo, local };
+      const avisos = JSON.parse(localStorage.getItem('avisos')) || [];
+
+      if (avisoEdicao > -1) {
+        avisos[avisoEdicao] = novoAviso;
+        avisoEdicao = -1;
       } else {
-        lista.sort((a, b) => new Date(b.dataInicio) - new Date(a.dataInicio));
+        avisos.push(novoAviso);
       }
 
-      lista.forEach((aviso, i) => {
+      localStorage.setItem('avisos', JSON.stringify(avisos));
+      limparCampos();
+      listarAvisos();
+    }
+
+    function listarAvisos() {
+      const avisos = JSON.parse(localStorage.getItem('avisos')) || [];
+      const ordenar = document.getElementById('ordenar').value;
+
+      if (ordenar === 'nome') {
+        avisos.sort((a, b) => a.nome.localeCompare(b.nome));
+      } else {
+        avisos.sort((a, b) => new Date(b.inicio) - new Date(a.inicio));
+      }
+
+      const tabela = document.getElementById('tabela');
+      tabela.innerHTML = '';
+
+      avisos.forEach((aviso, index) => {
         const tr = document.createElement('tr');
         tr.innerHTML = `
           <td>${aviso.nome}</td>
           <td>${aviso.cpf}</td>
-          <td>${aviso.dataInicio}</td>
-          <td>${aviso.dataFim}</td>
+          <td>${aviso.inicio}</td>
+          <td>${aviso.fim}</td>
+          <td>${aviso.motivo}</td>
+          <td>${aviso.local}</td>
           <td class="actions">
-            <button onclick="editar(${i})">Editar</button>
-            <button onclick="excluir(${i})">Excluir</button>
+            <button onclick="editarAviso(${index})">Editar</button>
+            <button onclick="excluirAviso(${index})">Excluir</button>
           </td>
         `;
         tabela.appendChild(tr);
       });
     }
 
-    function editar(index) {
-      const aviso = listaAvisos[index];
+    function editarAviso(index) {
+      const aviso = JSON.parse(localStorage.getItem('avisos'))[index];
       document.getElementById('nome').value = aviso.nome;
       document.getElementById('cpf').value = aviso.cpf;
-      document.getElementById('dataInicio').value = aviso.dataInicio;
-      document.getElementById('dataFim').value = aviso.dataFim;
-      editandoIndex = index;
+      document.getElementById('inicio').value = aviso.inicio;
+      document.getElementById('fim').value = aviso.fim;
+      document.getElementById('motivo').value = aviso.motivo;
+      document.getElementById('local').value = aviso.local;
+      avisoEdicao = index;
     }
 
-    function excluir(index) {
-      listaAvisos.splice(index, 1);
-      salvarDados();
+    function excluirAviso(index) {
+      const avisos = JSON.parse(localStorage.getItem('avisos')) || [];
+      avisos.splice(index, 1);
+      localStorage.setItem('avisos', JSON.stringify(avisos));
+      listarAvisos();
     }
 
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
-      const nome = document.getElementById('nome').value;
-      const cpf = document.getElementById('cpf').value;
-      const dataInicio = document.getElementById('dataInicio').value;
-      let dataFim = document.getElementById('dataFim').value;
-      const reduzir = document.getElementById('reduzirSeteDias').checked;
+    function limparCampos() {
+      document.getElementById('nome').value = '';
+      document.getElementById('cpf').value = '';
+      document.getElementById('inicio').value = '';
+      document.getElementById('fim').value = '';
+      document.getElementById('motivo').value = '';
+      document.getElementById('local').value = '';
+    }
 
-      // Aplica a redução de 7 dias se estiver marcado
-      if (reduzir) {
-        const fim = new Date(dataFim);
-        fim.setDate(fim.getDate() - 7);
-        dataFim = fim.toISOString().split('T')[0];
-      }
-
-      const aviso = { nome, cpf, dataInicio, dataFim };
-
-      if (editandoIndex > -1) {
-        listaAvisos[editandoIndex] = aviso;
-        editandoIndex = -1;
-      } else {
-        listaAvisos.push(aviso);
-      }
-
-      form.reset();
-      salvarDados();
-    });
-
-    ordenar.addEventListener('change', mostrarTabela);
-
-    mostrarTabela();
+    window.onload = listarAvisos;
   </script>
 </body>
 </html>
